Fixed the border-top not showing.

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 hr {
   border: 0;
   height: 0;
-  border-top: 1px solid rgba(0, 0, 0 0.1);
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   margin: 8px 8px;
 }
